# Severus

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  cert.pem  key.pem  known_hosts.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  security.rs
src-tauri/src/net/: direct.rs  mod.rs  quic.rs  room.rs
