[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

axum = {version = "0.8.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["rustls", "tls-rustls-no-provider"] }
tokio = {version = "1.49.0", features = ["full"] }
tokio-tungstenite = {version = "0.28.0", features = ["rustls-tls-native-roots"] }

tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

postcard = {version = "1.1.3", features = ["alloc"] }
uuid = {version = "1.19.0", features = ["v4", "serde"] }
futures-util = "0.3.31"
tower-http = { version = "0.6.8", features = ["cors"] } # Для работы с фронтендом


rustls       = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
rcgen = "0.14.6"
rustls-pki-types = "1.13.2"

tauri-plugin-opener = "2.0"

snow = "0.10.0"
sha2 = "0.10.9"
hex = "0.4.3"
http = "1.4.0"
hyper = "1.8.1"


iroh = "0.95.1"
iroh-tickets = "0.2"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

metrics = "0.24.3"

rusqlite = {version = "0.38.0", features = ["bundled"] }
rand = "0.9.2"
